--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ img {
 <body>
 	<div>
 	<figure>
-	<a href="file:///Users/brendanreynoldsstoianov/Desktop/ARTS%20530/Website_development/Digital_works.html">
+	<a href="https://brainybrendan25.github.io/Digital_works/" title="Digital Works">
 	<img src="https://cdn.myportfolio.com/bd33f49c-87c8-4d90-aa56-be8c32b4f43f/8b42378d-9e73-4059-86ee-cd02b198624f_rw_1200.jpg?h=1ee031abc232adfd829ff49c945f39a1" alt="Drawing 3" style="width:500px;height:800px">
 	</a>
 	<div class="center">
